# backend

./: .cursorrules  .env  .env.example  .gitignore  README.md  forms.db  pyproject.toml  setup_venv.cmd  test_crud.py  testing.py
app/: http-client.env.json  main.py  requests.http  rest-crud-2.http  rest-crud.http
app/api/: endpoints.py
app/api/v1/endpoints/: forms.py  sections.py
app/core/: config.py  database.py
app/crud/: form.py  operations.py
app/llm/: models.py  stream_router.py  survey_agent.py  survey_router.py
app/models/: form.py
app/schemas/: form.py  schemas.py
