[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["Adrian Padurean <securiteradmin@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pypdf = "^4.2.0"
streamlit = "^1.36.0"
openai = "^1.35.6"
pypdf2 = "^3.0.1"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchainhub = "^0.1.20"
langchain-openai = "^0.1.13"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
alembic = "^1.13.2"
pydantic = "^2.8.0"
posthog = "^3.5.0"
sentry-sdk = "^2.7.1"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
databases = "^0.9.0"
langchain-chroma = "^0.1.2"
chroma = "^0.2.0"
python-dotenv = "^1.0.1"
debugpy = "^1.8.2"
pytest = "^8.3.2"
httpx = "^0.27.0"
coverage = "^7.6.0"
openapi-generator-cli = "^4.3.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
chromadb = "^0.5.5"
streamlit-option-menu = "^0.3.13"
plotly = "^5.23.0"
chardet = "^5.2.0"
pycountry = "^24.6.1"
selenium = "^4.24.0"
webdriver-manager = "^4.0.2"
websockets = "^13.1"
ngrok = "^1.4.0"
pyngrok = "^7.2.0"


[tool.black]
line-length = 79
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = []
known_third_party = []
line_length = 79
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
order_by_type = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"